document hack